Fix some mistakes

--- a/Profile.html
+++ b/Profile.html
@@ -157,7 +157,7 @@
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <img class="u-image u-image-default u-image-1" src="images/960-540-orlin-goranov.jpg" alt="" data-image-width="960" data-image-height="540">
                 <h2 class="u-text u-text-2">
-                  <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base wN4A4 u-btn-1" href="https://mariastbos.wixsite.com/website/event-info/kontsert-na-orlin-goranov" rel="">Концерт на Орлин Горанов</a>
+                  <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base wN4A4 u-btn-1"  rel="">Концерт на Орлин Горанов</a>
                 </h2>
                 <a href="Event-Orlin-Goranov.html" data-page-id="1291803895" class="u-border-0 u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-2">прочети още</a>
               </div>
@@ -166,7 +166,7 @@
               <div class="u-container-layout u-similar-container u-container-layout-2">
                 <img class="u-image u-image-default u-image-2" src="images/47685376_10156243526808740_4710502834972393472_n.jpg" alt="" data-image-width="640" data-image-height="478">
                 <h2 class="u-text u-text-3">
-                  <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base wN4A4 u-btn-3" href="https://mariastbos.wixsite.com/website/event-info/kontsert-na-lili-ivanova" rel="">Концерт на Лили Иванова</a>
+                  <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base wN4A4 u-btn-3"  rel="">Концерт на Лили Иванова</a>
                 </h2>
                 <a href="Event-Lili-Ivanova.html" data-page-id="2436324381" class="u-border-0 u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-4">ПРОЧЕТИ ОЩЕ</a>
               </div>
@@ -175,7 +175,7 @@
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <img class="u-image u-image-default u-image-3" src="images/STNJ-Romeo-and-Juliet_4.jpg" alt="" data-image-width="504" data-image-height="360">
                 <h2 class="u-text u-text-4">
-                  <a class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base wN4A4 u-btn-5" href="https://mariastbos.wixsite.com/website/event-info/izlozhba-grafikaturi-ot-ivan-gazdov" rel="">Постановка "Ромео и Жулиета" НАТФИЗ<br>
+                  <a class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base wN4A4 u-btn-5" rel="">Постановка "Ромео и Жулиета" НАТФИЗ<br>
                   </a>
                 </h2>
                 <a href="Event-Romeo-and-Juliet.html" data-page-id="413146" class="u-border-0 u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-6">ПРОЧЕТИ ОЩЕ</a>
